--- a/composer.json
+++ b/composer.json
@@ -31,9 +31,9 @@
     },
     "require": {
         "php": "^8.0",
-        "illuminate/contracts": "^8.0 || ^9.0",
-        "illuminate/database": "^8.0 || ^9.0",
-        "illuminate/support": "^8.0 || ^9.0"
+        "illuminate/contracts": "^8.0 || ^9.0 || ^10.0",
+        "illuminate/database": "^8.0 || ^9.0 || ^10.0",
+        "illuminate/support": "^8.0 || ^9.0 || ^10.0"
     },
     "require-dev": {
         "laravel/legacy-factories": "^1.0.4",
